--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,23 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.title{
+  text-align: center;
+  font-size: 3.5rem;
+  color: rgb(11, 84, 11);
+}
+.pointer{
+  cursor: pointer;
+}
+.button-new-event{
+  padding: .5rem 1.50rem;
+  border-radius: 1rem;
+  position: relative;
+  left: 3rem;
+}
+.button-new-event:hover{
+  background-color: rgb(11, 84, 11);
+  color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.table-div{
+  margin-top: 2rem;
+  margin-inline: 3rem;
 }
